k8s/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
  clusterIP: None
