k8s/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: notes-web
  ports:
    - port: 5000
