k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /create
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 5000
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 5000
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 5000
